<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.sigpwned</groupId>
    <artifactId>rapier</artifactId>
    <version>0.0.0-b0-SNAPSHOT</version>
    <name>rapier</name>
    <inceptionYear>2024</inceptionYear>
    <description>Code generation companion for Dagger</description>
    <url>https://github.com/sigpwned/rapier</url>
    <packaging>pom</packaging>

    <organization>
        <name>Andy Boothe</name>
        <url>https://www.sigpwned.com/</url>
    </organization>

    <scm>
        <connection>scm:git:ssh://git@github.com/sigpwned/rapier.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/sigpwned/rapier.git</developerConnection>
        <url>https://github.com/sigpwned/rapier/tree/main</url>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Andy Boothe</name>
            <email>andy.boothe@gmail.com</email>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/sigpwned/rapier</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.release>11</maven.compiler.release>

        <!-- These versions are injected into tests, so all attempts to -->
        <!-- control versions of these dependencies must be done here. -->
        <dagger.version>2.55</dagger.version>
        <javax.inject.version>1</javax.inject.version>
        <jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
        <jsr305.version>3.0.2</jsr305.version>
        <awssdk.version>2.29.43</awssdk.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <configuration>
                        <!--
                            -XX:+EnableDynamicAgentLoading is to suppress a
                            Mockito self-attach warning when running tests
                        -->
                        <!--
                            -Xshare:off is to suppress some warnings from
                            Mockito when mocking Object methods during tests
                        -->
                        <!--
                            The "add exports" flags below below are required for
                            testing annotation processors using
                            com.google.testing.compile:compile-testing in
                            Java 9+.
                        -->
                        <argLine>
                            -XX:+EnableDynamicAgentLoading
                            -Xshare:off
                            --add-exports
                            jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                            --add-opens
                            jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                            --add-exports
                            jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                            --add-opens
                            jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                            --add-exports
                            jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                            --add-opens
                            jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        </argLine>
                        <systemPropertyVariables>
                            <maven.dagger.version>${dagger.version}</maven.dagger.version>
                            <maven.javax.inject.version>${javax.inject.version}</maven.javax.inject.version>
                            <maven.jakarta.inject-api.version>${jakarta.inject-api.version}</maven.jakarta.inject-api.version>
                            <maven.jsr305.version>${jsr305.version}</maven.jsr305.version>
                            <maven.awssdk.version>${awssdk.version}</maven.awssdk.version>
                            <maven.project.basedir>${project.basedir}</maven.project.basedir>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>            
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>templating-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>
                            </rules>
                            <failFast>true</failFast>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <executions>
                    <!-- Compilation for src/main/java -->
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <release>11</release> <!-- Java 11 for main -->
                        </configuration>
                    </execution>
    
                    <!-- Compilation for src/test/java -->
                    <execution>
                        <id>default-testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <release>17</release> <!-- Java 17 for test -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.5.0</version>
                <configuration>
                    <verbose>false</verbose>
                </configuration>
                <executions>
                    <execution>
                        <id>update-file-header</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
                            <processStartTag>=================================LICENSE_START==================================</processStartTag>
                            <processEndTag>==================================LICENSE_END===================================</processEndTag>
                            <sectionDelimiter>====================================SECTION=====================================</sectionDelimiter>
                            <licenseName>apache_v2</licenseName>
                            <roots>
                                <root>src/main/java</root>
                                <root>src/test/java</root>
                            </roots>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.11.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${awssdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.20.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-bom</artifactId>
                <version>2.0.16</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>5.15.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.dagger</groupId>
                <artifactId>dagger</artifactId>
                <version>${dagger.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.dagger</groupId>
                <artifactId>dagger-compiler</artifactId>
                <version>${dagger.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>${javax.inject.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.inject</groupId>
                <artifactId>jakarta.inject-api</artifactId>
                <version>${jakarta.inject-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${jsr305.version}</version>
            </dependency>
            
            <dependency>
                <groupId>com.google.testing.compile</groupId>
                <artifactId>compile-testing</artifactId>
                <version>0.21.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>rapier-core</module>
        <module>rapier-compiler-core</module>
        <module>rapier-assumptions-tests</module>
        <module>rapier-environment-variable</module>
        <module>rapier-environment-variable-compiler</module>
        <module>rapier-system-property</module>
        <module>rapier-system-property-compiler</module>
        <module>rapier-cli</module>
        <module>rapier-cli-compiler</module>
        <module>rapier-aws-ssm</module>
        <module>rapier-aws-ssm-compiler</module>
        <module>rapier-example</module>
        <module>rapier-bom</module>
    </modules>

      <!-- For releasing to maven central -->
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <failOnError>false</failOnError>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <configuration>
                            <tagNameFormat>v@{project.version}</tagNameFormat>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <useReleaseProfile>false</useReleaseProfile>
                            <releaseProfiles>release</releaseProfiles>
                            <goals>deploy</goals>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
